mdapi/objects/Program_Message__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Quick information regarding Program GUI messages, Error messages, log entry messages, etc.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Hidden field used by the approval process email</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Program or System Error code found in message</description>
        <inlineHelpText>Optional Field - Program or System Error code found in message - Example:  -32</inlineHelpText>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Details__c</fullName>
        <description>List where the exact message can be found, examples:  ImageManager.log, ImageManager GUI, Endpoint Log, Appliance Window, Email notification from ImageManager, SPX Service log, etc.</description>
        <inlineHelpText>List where the exact message can be found, examples:  ImageManager.log, ImageManager GUI, Endpoint Log, Appliance Window, Email notification from ImageManager, SPX Service log, etc.</inlineHelpText>
        <label>Location Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_Example__c</fullName>
        <description>Entire context example of the program message found on the screen or in logs, including timestamps and values.</description>
        <inlineHelpText>Example:  13-Aug-2016 08:18:29 sbvol 503 Fatal I/O error on \\?\STC_SnapShot_Volume_21_0 offset 1504dc2000 on read (-31 A device attached to the system is not functioning.)</inlineHelpText>
        <label>Message Example</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module_Code__c</fullName>
        <description>If there is a program module code in the message</description>
        <inlineHelpText>Optional Field - Module Code found in log message - Example:  503</inlineHelpText>
        <label>Module Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Versions__c</fullName>
        <description>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</description>
        <inlineHelpText>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</inlineHelpText>
        <label>Product Versions Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Module__c</fullName>
        <description>If a module name is mentioned in the message, usually a log.</description>
        <inlineHelpText>Optional Field - Module Name in message, usually found in logs - Example:  sbvol</inlineHelpText>
        <label>Program Module</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Content__c</fullName>
        <description>Links to other related content regarding this message.</description>
        <inlineHelpText>Insert Smart Links to other related articles.</inlineHelpText>
        <label>Related Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Seen_Where__c</fullName>
        <description>Select all locations where this message is found.</description>
        <inlineHelpText>Select all locations where this message is found.</inlineHelpText>
        <label>Seen Where</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email Notification</fullName>
                </value>
                <value>
                    <fullName>GUI Message</fullName>
                </value>
                <value>
                    <fullName>Popup Window</fullName>
                </value>
                <value>
                    <fullName>Program Logs</fullName>
                </value>
                <value>
                    <fullName>Windows Application Event Log</fullName>
                </value>
                <value>
                    <fullName>Windows System Event Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Message</label>
    <pluralLabel>Program Messages</pluralLabel>
    <validationRules>
        <fullName>Program_Message_Title_Length_Rule</fullName>
        <active>true</active>
        <description>Require that the title is less than 66 characters</description>
        <errorConditionFormula>LEN( Title ) &gt; 65</errorConditionFormula>
        <errorMessage>Title Length too long - To optimize Search Engine results, the article title must be less than 66 characters.</errorMessage>
    </validationRules>
</CustomObject>